[package]
name = "anarchy_dashboard_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web    = "3.3.2"
actix-cors   = "0.5.4"
tokio        = "0.2.25"
serde        = "1.0.129"
strum        = "0.22"
strum_macros = "0.22"
reqwest      = { version = "0.10", features = ["json"] }
dotenv       = "0.15"
async-trait  = "0.1.50"